--- a/sdk/graphql-transport/package.json
+++ b/sdk/graphql-transport/package.json
@@ -31,7 +31,7 @@
         "prettier:check": "prettier -c --ignore-unknown --ignore-path=../../.prettierignore --ignore-path=.prettierignore .",
         "prettier:fix": "prettier -w --ignore-unknown --ignore-path=../../.prettierignore --ignore-path=.prettierignore .",
         "test:e2e:nowait": "vitest run e2e",
-        "test:e2e:prepare": "docker-compose down && docker-compose up -d && cargo build --bin iota --features indexer --profile dev && cross-env RUST_LOG=info,iota=error,anemo_tower=warn,consensus=off cargo run --features indexer --bin iota -- start --with-faucet --force-regenesis --with-indexer --pg-port 5435 --pg-db-name iota_indexer_v2 --with-graphql",
+        "test:e2e:prepare": "docker-compose down && docker-compose up -d && cargo build --bin iota --features indexer --profile dev && cross-env RUST_LOG=info,iota=error,anemo_tower=warn,consensus=off cargo run --features indexer --bin iota start --with-faucet --force-regenesis --with-indexer --pg-port 5435 --pg-db-name iota_indexer_v2 --with-graphql",
         "test:e2e": "wait-on http://127.0.0.1:9123 -l --timeout 180000 && vitest"
     },
     "repository": {
