--- a/sdk/kiosk/package.json
+++ b/sdk/kiosk/package.json
@@ -35,7 +35,7 @@
         "lint": "pnpm run eslint:check && pnpm run prettier:check",
         "lint:fix": "pnpm run eslint:fix && pnpm run prettier:fix",
         "test:e2e": "wait-on http://127.0.0.1:9123 -l --timeout 120000 && vitest run e2e",
-        "prepare:e2e": "cargo build --bin iota --profile dev && cross-env RUST_LOG=warn,iota=error,anemo_tower=warn,consensus=off cargo run --bin iota -- start --with-faucet --force-regenesis"
+        "prepare:e2e": "cargo build --bin iota --profile dev && cross-env RUST_LOG=warn,iota=error,anemo_tower=warn,consensus=off cargo run --bin iota start --with-faucet --force-regenesis"
     },
     "dependencies": {
         "@iota/iota-sdk": "workspace:*"
