--- a/sdk/typescript/test/e2e/data/demo-bear/Move.toml
+++ b/sdk/typescript/test/e2e/data/demo-bear/Move.toml
@@ -4,7 +4,7 @@ version = "0.0.1"
 edition = "2024.beta"
 
 [dependencies]
-Iota = { git = "https://github.com/iotaledger/iota.git", subdir = "crates/iota-framework/packages/iota-framework", rev = "framework/testnet" }
+Iota = { local = "../../../../../../crates/iota-framework/packages/iota-framework" }
 
 [addresses]
 demo = "0x0"
