--- a/docs/examples/move/review_rating_dao_with_multisig/Move.toml
+++ b/docs/examples/move/review_rating_dao_with_multisig/Move.toml
@@ -1,3 +1,7 @@
+// Copyright (c) Mysten Labs, Inc.
+// Modifications Copyright (c) 2024 IOTA Stiftung
+// SPDX-License-Identifier: Apache-2.0
+
 [package]
 name = "reviews_rating"
 version = "0.0.1"
